tests/Compiler/SemanticErrors/missingMain/missingMain.outerrors
//1
function multi2(x: integer) => integer
{
    return (2 * x);
}
// 1: [Semantic][line 0]Error: missing main function
